--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,10 @@
 # add the following to _config.yml file
+
+title: Soheil Tabatabaei M.
+Logo: /soheil.png
+show_downloads: true
+
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
