--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,11 @@ title: Soheil Tabatabaei M.
 logo: /soheil.png
 show_downloads: true
 
+minima:
+  skin: dark
+  date_format: "%b %-d, %Y
 
+  
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
